User details added to the API. Auth Tokens, Documentation added. Search is working if you login. Pretty cool so far
